apps/golang/k8s-manifest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-go
  labels:
    app: app-go
spec:
  type: NodePort
  selector:
    app: app-go
  ports:
    - name: http
      port: 80
      targetPort: 80
